added numbers inside squares

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,8 @@ FetchContent_Declare(SFML
 )
 FetchContent_MakeAvailable(SFML)
 
-add_executable(Calculator main.cpp)
+add_executable(Calculator main.cpp Button.cpp)
+target_include_directories(Calculator PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 target_compile_features(Calculator PRIVATE cxx_std_17)
 target_link_libraries(Calculator PRIVATE SFML::Graphics)
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/ARIAL.TTF" DESTINATION "${CMAKE_BINARY_DIR}")
