added symbols inside squares

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,4 @@ target_include_directories(Calculator PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 target_compile_features(Calculator PRIVATE cxx_std_17)
 target_link_libraries(Calculator PRIVATE SFML::Graphics)
 file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/ARIAL.TTF" DESTINATION "${CMAKE_BINARY_DIR}")
+file(COPY "${CMAKE_CURRENT_SOURCE_DIR}/icons" DESTINATION "${CMAKE_BINARY_DIR}")
